noinst_HEADERS =  \
bios.h \
bios_disk.h \
callback.h \
cpu.h \
cross.h \
control.h \
dma.h \
dos_inc.h \
dos_system.h \
dosbox.h \
fpu.h \
hardware.h \
inout.h \
joystick.h \
keyboard.h \
logging.h \
mapper.h \
mem.h \
mixer.h \
modules.h \
mouse.h \
paging.h \
pic.h \
programs.h \
render.h \
regs.h \
render.h \
setup.h \
shell.h \
support.h \
timer.h \
vga.h \
video.h

